[package]
name = "tokio-nats"
version = "0.1.0"
authors = ["Sebastian Zimmer <sebastian.zim@googlemail.com>"]
edition = "2018"
license = "LGPL-3.0"
description = "Async-await ready NATS library"
repository = "https://github.com/sebzim4500/tokio-nats"

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5.3"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
futures-util = { version = "0.3.1", features = ["sink", "async-await"] }
subslice = "0.2.2"
parking_lot = "0.9"
derive_builder = "0.9"
log = "0.4"

[dev-dependencies]
env_logger = "0.7.1"