[package]
name = "tokio-nats"
version = "0.3.0"
authors = ["Sebastian Zimmer <sebastian.zim@googlemail.com>"]
edition = "2021"
license = "LGPL-3.0"
description = "Async-await ready NATS library"
repository = "https://github.com/sebzim4500/tokio-nats"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.2.1"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
futures-util = { version = "0.3.1", features = ["sink", "async-await"] }
subslice = "0.2.2"
parking_lot = "0.12.1"
derive_builder = "0.20.1"
log = "0.4"
tokio-rustls = "0.26.0"
rustls-webpki = "0.102.8"
rustls-pemfile = "2.2.0"
derive_more = { version = "1.0.0", features = ["display"] }

[dev-dependencies]
env_logger = "0.11.5"
pretty_env_logger = "0.5.0"
